Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="col-lg-6" style="float:none;margin:auto;">
           <h1 class="big-heading"style="color: #fff"><b> Malvinus Pialin Wongso</b></h1>
-          <h3 class="features-title"><b>Cyber Security Undergraduate</b></h3>
+          <h3 class="features-title" style="text-align: center"><b>Cyber Security Undergraduate</b></h3>
         </div>
 
         <div class="col-lg-6">
@@ -85,61 +85,71 @@
 
   </section>
 
-  <!-- education backgrounds -->
+  <!--  Profile -->
   <section class="white-section"id="ProfileSection">
-    <div id="education-carousel" class="carousel slide" data-ride="false">
 
-
-        <div class="container-fluid">
-          <section class="white-section">
-            <h1 class="big-heading"><i class="fas fa-user-circle"></i><b> Profile</b></h1>
-          </section>
-          <hr>
-          <div class="row">
-            <div class="feature-box col-lg-4">
+      <div class="container-fluid">
+        <section class="white-section">
+          <h1 class="big-heading"><i class="fas fa-user-circle"></i><b> Profile</b></h1>
+          <p style="font-size: 1.4rem">I'm an ambitious learner</p>
+        </section>
+        <hr>
+        <div class="row">
+          <div class="feature-box col-lg-4">
             <h3 class="feature-title"><b>Details</b></h3>
-            <p><b>Name:</b></p>
+            <p class="caption"><b>Name:</b></p>
             <p>Malvinus Pialin Wongso</p>
-            <p><b>Age:</b></p>
+            <p class="caption"><b>Age:</b></p>
             <p>17 years old</p>
-            <p><b>Status:</b></p>
+            <p class="caption"><b>Status:</b></p>
             <p>Undergraduate</p>
+            <p class="caption"><b>Location:</b></p>
+            <p>Pondok Aren, Tangerang Selatan, Banten, Indonesia </p>
+          </div>
+
+
+          <div class="feature-box col-lg-4">
+              <img class="titles-image" color="white" src="images/profile-modified.png" alt="ProfileModified-img">
             </div>
 
-
-            <div class="feature-box col-lg-4">
-                <img class="titles-image" color="white" src="images/profile-modified.png" alt="ProfileModified-img">
-              </div>
-
-            <div class="feature-box col-lg-4">
-              <h3 class="feature-title"><b>About Me</b></h3>
-              <p>I'm a cyber security undergraduate with good knowledge on programming. I love spending time on codes and optimizing my projects. I'm currently working on a creative game and studying Python, C#, HTML, Unity, CSS, and Javascript.</p>
-            </div>
+          <div class="feature-box col-lg-4">
+            <h3 class="feature-title"><b>About Me</b></h3>
+            <p>I'm a cyber security undergraduate with good knowledge on programming. I love spending time on codes and optimizing my projects. I'm currently working on a creative game and studying Python, C#, HTML, Unity, CSS, and Javascript. With many active experiences, I have developed excellent leadership and technical skills in working with teams. </p>
           </div>
         </div>
+      </div>
+
+
+  </section>
+
+
+
+  <!-- Education backgroundS -->
+
+  <section class="second-section"id="EducationSection">
+
+      <div class="container-fluid">
+          <h1 class="big-heading" ><i class="fas fa-graduation-cap"></i><b> Education</b></h1>
+          <p style="font-size: 1.4rem">"Root of honesty and virtue lies in good education"</p>
+          <p style="font-size: 1.4rem">- Plutarch</p>
+          <hr>
+
+          <div class="row">
+            <div class="feature-box col">
+              <h3 class="feature-title"><b>Details</b></h3>
+              <p class="caption"><b>2008 - 2010</b>    Kindergarten - Kiddycare</p>
+              <p class="caption"><b>2010 - 2016</b>    SDK Ricci II</p>
+              <p class="caption"><b>2016 - 2019</b>    SMPK Penabur Bintaro Jaya</p>
+              <p class="caption"><b>2019 - 2022</b>    SMAK Penabur Bintaro Jaya</p>
+              <p class="caption"><b>2021 - 2022</b>    Purwadikha Digital Technology</p>
+              <p class="caption"><b>2022 - 2026</b>    BINUS University </p>
+            </div>
+          </div>
 
       </div>
 
   </section>
 
-
-
-  <!-- BORDERLINES -->
-
-  <section class="white-section"id="MyEntertainmentsSection">
-    <section class="colored-section">
-      <hr style="height:8px">
-      </hr>
-    </section>
-    <h1 class="big-heading"><i class="fas fa-info-circle"></i><b> Education</b></h1>
-  </section>
-
-  <!-- Testimonials -->
-
-  <section class="colored-section">
-
-
-  </section>
 
   <!-- Border -->
 
