Finished first phase of the professional website

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#footer"> Profile</a>
+              <a class="nav-link" href="#ProfileSection"><i class="fas fa-user-circle"></i> Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#MyCreationsSection"> Education</a>
+              <a class="nav-link" href="#EducationSection"><i class="fas fa-book"></i> Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#MyProfileSection"> Experience</a>
+              <a class="nav-link" href="#ExperiencesSection"><i class="fas fa-graduation-cap"></i> Experiences</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#EntertainmentsSection"> Skills</a>
+              <a class="nav-link" href="#SkillsSection"><i class="fas fa-globe"></i> Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#ReviewSection"> Projects</a>
+              <a class="nav-link" href="#ProjectsSection"><i class="fas fa-download"></i> Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#ReviewSection"> Contact</a>
+              <a class="nav-link" href="#ContactSection"><i class="far fa-comment-alt"></i> Contact</a>
             </li>
           </ul>
 
@@ -129,20 +129,75 @@
   <section class="second-section"id="EducationSection">
 
       <div class="container-fluid">
-          <h1 class="big-heading" ><i class="fas fa-graduation-cap"></i><b> Education</b></h1>
+          <h1 class="big-heading" ><i class="fas fa-book"></i><b> Education</b></h1>
           <p style="font-size: 1.4rem">"Root of honesty and virtue lies in good education"</p>
           <p style="font-size: 1.4rem">- Plutarch</p>
           <hr>
 
           <div class="row">
-            <div class="feature-box col">
-              <h3 class="feature-title"><b>Details</b></h3>
-              <p class="caption"><b>2008 - 2010</b>    Kindergarten - Kiddycare</p>
-              <p class="caption"><b>2010 - 2016</b>    SDK Ricci II</p>
-              <p class="caption"><b>2016 - 2019</b>    SMPK Penabur Bintaro Jaya</p>
-              <p class="caption"><b>2019 - 2022</b>    SMAK Penabur Bintaro Jaya</p>
-              <p class="caption"><b>2021 - 2022</b>    Purwadikha Digital Technology</p>
-              <p class="caption"><b>2022 - 2026</b>    BINUS University </p>
+            <div class="feature-box col-md-4">
+              <h3 class="feature-title" style="text-align: left"><b>Kiddycare Kindergarten</b></h3>
+              <p class="caption" style="text-align: left"><b>2008 - 2010</b></p>
+            </div>
+            <div class="feature-box col-md-8">
+              <p class="caption" style="text-align: left"><b>Pre-school Education</b></p>
+              <p style="text-align: left">The education was the class that prepared me before I went to primary school. With this establishment, I learnt and prepared my social abilities as a young kid. This education taught me a lot about the basic manners and education in general.</p>
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="feature-box col-md-4">
+              <h3 class="feature-title" style="text-align: left"><b>SDK Ricci II</b></h3>
+              <p class="caption" style="text-align: left"><b>2010 - 2016</b></p>
+            </div>
+            <div class="feature-box col-md-8">
+              <p class="caption" style="text-align: left"><b>Primary School</b></p>
+              <p style="text-align: left">SDK Ricci II was my educational institution when I was still undergoing primary school. Here, I studied elementary level subjects generally with various access to certain aspects of science and social related studies.</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="feature-box col-md-4">
+              <h3 class="feature-title" style="text-align: left"><b>SMPK Penabur Bintaro Jaya</b></h3>
+              <p class="caption" style="text-align: left"><b>2016 - 2019</b></p>
+            </div>
+            <div class="feature-box col-md-8">
+              <p class="caption" style="text-align: left"><b>Middle School</b></p>
+              <p style="text-align: left">Throughout my middle school, I found my love for science studies. This level of education was the one that would decide whether I was going to pursue science or social studies later on in high school.</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="feature-box col-md-4">
+              <h3 class="feature-title" style="text-align: left"><b>SMAK Penabur Bintaro Jaya</b></h3>
+              <p class="caption" style="text-align: left"><b>2019 - 2022</b></p>
+            </div>
+            <div class="feature-box col-md-8">
+              <p class="caption" style="text-align: left"><b>High School</b></p>
+              <p style="text-align: left">In high school, I really enjoyed doing science, maths, and other subjects which were given to me. I recognized that I was really attracted to technology and programming. I joined many organisations and achieved many notable achievements here.</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="feature-box col-md-4">
+              <h3 class="feature-title" style="text-align: left"><b>Purwadhika Digital Technology School</b></h3>
+              <p class="caption" style="text-align: left"><b>2021-2022</b></p>
+            </div>
+            <div class="feature-box col-md-8">
+              <p class="caption" style="text-align: left"><b>Course - Game Development</b></p>
+              <p style="text-align: left">Purwadhika is one of the most leading technology based school with many programs. Here, I studied how to make game using C# and Unity. With logical solutions and creativity, I've been developing and creating few games/ideas for the upcoming future.</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="feature-box col-md-4">
+              <h3 class="feature-title" style="text-align: left"><b>BINUS University</b></h3>
+              <p class="caption" style="text-align: left"><b>2022 - 2026</b></p>
+            </div>
+            <div class="feature-box col-md-8">
+              <p class="caption" style="text-align: left"><b>Bachelor - Cyber Security</b></p>
+              <p style="text-align: left">Right now, I'm studying cyber security in BINUS University until 2026. I am really attracted with networking security systems and other programming related activities by joining this program. I wish that in the near future, the scholarship I got for this study will help me achieve my dreams.</p>
             </div>
           </div>
 
@@ -150,16 +205,99 @@
 
   </section>
 
+  <!-- Experiences-->
+  <section class="white-section"id="ExperiencesSection">
 
-  <!-- Border -->
+      <div class="container-fluid">
+          <h1 class="big-heading" ><i class="fas fa-graduation-cap"></i><b> Experiences and Achievements</b></h1>
+          <p style="font-size: 1.4rem">“Be thankful for everything that happens in your life; it’s all an experience.”</p>
+          <p style="font-size: 1.4rem">- Roy T. Bennett  </p>
+          <hr>
 
-  <section class="colored-section">
-    <hr style="height:8px">
-    </hr>
+          <div class="row">
+            <div class="feature-box col-md-6">
+              <h3 class="feature-title" style="text-align: left"><b>SDK Ricci II</b></h3>
+              <p class="caption" style="text-align: left"><b>2016</b></p>
+            </div>
+            <div class="feature-box col-md-6">
+              <p class="caption" style="text-align: left"><b>1. General Champion (Primary School)</b></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="feature-box col-md-6">
+              <h3 class="feature-title" style="text-align: left"><b>SMPK Penabur Bintaro Jaya</b></h3>
+              <p class="caption" style="text-align: left"><b>2019</b></p>
+            </div>
+            <div class="feature-box col-md-6">
+              <p class="caption" style="text-align: left"><b>1. Second General Champion (Middle School)</b></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="feature-box col-md-6">
+              <h3 class="feature-title" style="text-align: left"><b>SMAK Penabur Bintaro Jaya</b></h3>
+              <p class="caption" style="text-align: left"><b>2019 - 2022</b></p>
+            </div>
+            <div class="feature-box col-md-6">
+              <p class="caption" style="text-align: left"><b>1. School Event Visual Design Committe (MOSAIC -> 2020)</b></p>
+              <p class="caption" style="text-align: left"><b>2. General Champion (10th grade of High School -> 2020)</b></p>
+              <p class="caption" style="text-align: left"><b>3. Class President (11th grade -> 2020 - 2021)</b></p>
+              <p class="caption" style="text-align: left"><b>4. Member of MPK (2020-2021)</b></p>
+              <p class="caption" style="text-align: left"><b>5. Second General Champion (11th grade of High School -> 2021)</b></p>
+              <p class="caption" style="text-align: left"><b>6. School Event Design Committee (CADENCE - 2021)</b></p>
+              <p class="caption" style="text-align: left"><b>7. Class President (12th grade -> 2021 - 2022)</b></p>
+              <p class="caption" style="text-align: left"><b>8. Treasurer of MPK (2021 - 2022)</b></p>
+          </div>
+
+      </div>
+
   </section>
 
-  <!-- Games and download section -->
 
+
+<!-- Skills -->
+<section class="second-section"id="SkillsSection">
+
+    <div class="container-fluid">
+        <h1 class="big-heading" ><i class="fas fa-globe"></i><b> Skills</b></h1>
+        <p style="font-size: 1.4rem">"Excellence is not a skill, it's an attitude"</p>
+        <p style="font-size: 1.4rem">- Ralph Marston</p>
+        <hr>
+
+        <div class="row">
+          <div class="feature-box col">
+            <p class="caption" style="text-align: middle"><b>- Excellent leadership skills, ranging from team managements to problem controls;</b></p>
+            <p class="caption" style="text-align: middle"><b>- Strong communication skills with highly recognized abilities from working experiences;</b></p>
+            <p class="caption" style="text-align: middle"><b>- Amazing adaptability towards new challenges using technical and meticulous process;</b></p>
+            <p class="caption" style="text-align: middle"><b>- Adept marketing and business planning  abilities;</b></p>
+            <p class="caption" style="text-align: middle"><b>- Highly responsible in doing tasks with the most efficient and optimize steps;</b></p>
+            <p class="caption" style="text-align: middle"><b>- Clever knowledge and calculating capabilities in science;</b></p>
+            <p class="caption" style="text-align: middle"><b>- Fluent in both Indonesian and English; Elementary to intermediate fluency of Korean and Japanese;</b></p>
+            <p class="caption" style="text-align: middle"><b>- Good knowledge of a variety of programming languages including C#, Python, HTML, CSS, Javascript and Java;</b></p>
+            <p class="caption" style="text-align: middle"><b>- Competent capability working with Unity game engine to develop games;</b></p>
+          </div>
+        </div>
+
+    </div>
+
+</section>
+
+
+<!-- projects -->
+<section class="white-section"id="ProjectsSection">
+
+    <div class="container-fluid">
+        <h1 class="big-heading" ><i class="fas fa-download"></i><b> Projects/Creations</b></h1>
+        <p style="font-size: 1.4rem">“The desire to create is one of the deepest yearnings of the human soul.”</p>
+        <p style="font-size: 1.4rem">- Dieter F.</p>
+        <hr>
+    </div>
+
+</section>
+
+
+  <!-- Games and download section -->
   <section class="colored-section" id="Game1-GalaxyShooter">
 
     <div id="games-carousel" class="carousel slide" data-ride="false">
@@ -173,8 +311,8 @@
         <div class="carousel-item container-fluid">
           <div class="row">
             <div class="col-lg-6">
-              <h1 class="big-heading"><b>Shoot your way through space wars with Galaxy Shooter!</b></h1>
-              <button type="button" class="btn btn-dark btn-lg download-button"><a style="color:white" href="https://usaupload.com/5ukq/Space_War_(Malvins_game_version).zip"><i class="fab fa-google-play"></i> Download for PC</a></button>
+              <h1 class="big-heading" style="color:#fff"><b>Shoot your way through space wars with Galaxy Shooter!</b></h1>
+              <button type="button" class="btn btn-dark btn-lg download-button"><a style="color:white" href="https://usaupload.com/6jnd/Space_War_(Malvins_game_version).zip"><i class="fab fa-google-play"></i> Download for PC</a></button>
             </div>
             <div class="col-lg-6">
               <img class="title-image" src="images/GalaxyShooter.png" alt="galaxyshooter-img">
@@ -185,7 +323,7 @@
         <div class="carousel-item container-fluid">
           <div class="row">
             <div class="col-lg-6">
-              <h1 class="big-heading"><b>Start your slimy adventure in Slime and Dungeons!</b></h1>
+              <h1 class="big-heading" style="color:#fff"><b>Start your slimy adventure in Slime and Dungeons!</b></h1>
               <button type="button" class="btn btn-dark btn-lg download-button"><a style="color:white"><i class="fab fa-google-play"></i> Coming Soon</a></button>
             </div>
             <div class="col-lg-6">
@@ -206,16 +344,10 @@
       <span class="carousel-control-next-icon"></span>
       </a>
     </div>
-    </div>
+
   </section>
 
-  <!-- Border -->
-  <section class="white-section">
-    <hr>
-    </hr>
-  </section>
-
-
+  <hr>
 
   <!-- line stickers  -->
 
@@ -231,11 +363,11 @@
         <div class="carousel-item container-fluid">
           <div class="row">
             <div class="col-lg-6">
-              <h1 class="big-heading"><b>React with expressive stickers now on Line with Onegai Gakusei!</b></h1>
+              <h1 class="big-heading" style="color:#fff"><b>React with expressive stickers with Shonen Emoji!</b></h1>
               <a href="https://line.me/S/sticker/14790329?_from=lcm"><button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-google-play"></i> Buy in Line</button></a>
             </div>
             <div class="col-lg-6">
-              <img class="title-image" src="images/lineHeading.png" alt="onegaigakusei-img">
+              <img class="title-image" src="images/emoji-modified.png" alt="onegaigakusei-img">
             </div>
           </div>
         </div>
@@ -258,12 +390,22 @@
 
   <!-- Footer -->
 
-  <footer class="white-section" id="footer">
+  <footer class="white-section" id="ContactSection">
+
     <div class="container-fluid">
+
+      <section class="white-section">
+        <h1 class="big-heading"><i class="far fa-comment-alt"></i><b> Contact</b></h1>
+        <p style="font-size: 1.4rem; text-align: middle">For more information, please follow the icons/informations below.</p>
+        <hr>
+      </section>
       <a href="https://www.facebook.com/profile.php?id=100012657217972" ><i class="social-icon fab fa-facebook fa-3x"></i></a>
+      <a href="https://line.me/ti/p/ngQVIC5XNc" ><i class="social-icon fab fa-line fa-3x"></i></a>
       <a href="https://api.whatsapp.com/send?phone=6287839375928" ><i class="social-icon fab fa-whatsapp fa-3x"></i></a>
-      <a href="https://www.instagram.com/malvin024/" ><i class="social-icon fab fa-instagram fa-3x"></i></a>
-      <p>For more information, click the icons above.</p>
+      <a href="https://www.instagram.com/malvin_024/" ><i class="social-icon fab fa-instagram fa-3x"></i></a>
+      <a href="https://github.com/Malvin024/" ><i class="social-icon fab fa-github fa-3x"></i></a>
+      <p class="caption" style="text-align: middle">Telephone Number: +6287839375928</p>
+      <p class="caption" style="text-align: middle">Email: malvinwongso@gmail.com</p>
       <p>© Copyright - Malvinus Pialin Wongso - 2022</p>
     </div>
   </footer>
